--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,48 @@
-form {
-    margin: 0px auto;
-    width: 500px;
-    padding: 50px;
-    border: 1px solid;
-    border-radius: 8px;
+body {
+    font-family: sans-serif;
+    background-image: url("/home/wecode/akan/images/download (1).jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: black;
+    font-size: 17px;
 }
-label {
-    display: inline-block;
-    width: 80px;
-    text-align: right;
-}
-.form input {
-    font: 1em sans-serif;
-    width: 170px;
+.container {
+    width: 80%;
+    margin: auto;
     box-sizing: border-box;
-    border: 1px solid #999;
 }
-button {
-    margin-left: 5em;
+h1 {
+    font-size: 30px;
+    padding-top: 20px;
 }
-.gender {
-    display: inline;
-    padding-right: 50px;
+#year {
+    border-radius: 3px;
+    width: 80px;
+    height: 25px;
+    box-shadow: 2px 1px #333333;
+}
+#month {
+    border-radius: 3px;
+    width: 80px;
+    height: 25px;
+    box-shadow: 2px 1px #333333;
+}
+#day {
+    border-radius: 3px;
+    width: 80px;
+    height: 25px;
+    box-shadow: 2px 1px #333333;
+}
+#akan-name {
+    border-radius: 3px;
+    color: black;
+    background-color: #555555;
+    text-align: center;
+    width: 120px;
+    height: 35px;
+    font-size: 18px;
+    box-shadow: 1px 2px #333333;
+}
+#akan {
+    text-align: center;
 }
