--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-image: url("/home/wecode/akan/images/download (1).jpeg");
+    background-image: url("../images/download (1).jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     color: black;
